# Visualization-Language-Lab

./: .gitignore  .pre-commit-config.yaml  README.md  eslint.config.js  package.json  plan.md  pnpm-lock.yaml  vitest.config.js
backend/: .gitignore  planA.md  pyproject.toml
backend/data/: 1812_campaign_timeline.json  data.md  download.md
backend/data/geojson/: events.geojson
backend/data/historical_maps/: Minard.png.Zone.Identifier
backend/data/historical_maps/story/: Battle_of_Borodino.jpg.Zone.Identifier  David_-_Napoleon_crossing_the_Alps_-_Malmaison2.jpg.Zone.Identifier  Fire_of_Moscow_1812.jpg.Zone.Identifier
backend/scripts/: convert_shapefiles_to_geojson.py  download_geodata.py  download_jaxa_aw3d30.py  generate_events_geojson.py  process_dem.py  validate_data.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/components/: TheWelcome.vue
report_template/: SCIS2024cn.cls  cctart.cls  ref.bib  scis.bst  sciscn.tex
