[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "geopandas>=1.1.2",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pyproj>=3.7.2",
    "python-multipart>=0.0.21",
    "rasterio>=1.4.4",
    "scikit-image>=0.26.0",
    "uvicorn>=0.40.0",
]
