[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.128.0",
    "fiona>=1.10.1",
    "gdal==3.4.3",
    "geopandas>=1.1.2",
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pip>=25.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pyproj>=3.7.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.21",
    "rasterio>=1.4.4",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "shapely>=2.1.2",
    "uvicorn>=0.40.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
